<resources>
    <string name="app_name">FashionShop</string>

    <!-- Home -->
    <string name="coupons">Coupons</string>
    <string name="brands">Brands</string>
    <string name="category">Category</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="women">WOMEN</string>
    <string name="kid">KID</string>
    <string name="men">MEN</string>
    <string name="sale">SALE</string>
    <string name="pieces">Pieces</string>

    //login page
    <string name="login_title1">Welcome Back</string>
    <string name="login_title2">Sign in to continue</string>
    <string name="skip">Skip</string>
    <string name="login">LogIn</string>
    <string name="orSignup">Don’t have a account?</string>
    <string name="or">OR</string>
    <string name="google">Login With Google</string>
    <string name="client_id">546301706385-3ha2dk9gtudv5q6gheem5uh3tmc0kppq.apps.googleusercontent.com</string>

    //Sign up page
    <string name="signup">Create</string>
    <string name="signupTitle1">Create Account</string>
    <string name="signupTitle2">Let\'s Get Started!</string>
    <string name="orLogin1">Already have an account?</string>
    <string name="orLogin2">LogIn</string>=

    //data field
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //order details
    <string name="coupon">Coupon</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Tax</string>
    <string name="_0">0</string>
    <string name="discount">Discount</string>
    <string name="shipping_fee">Shipping Fee</string>
    <string name="total">Total</string>
    <string name="currency_title">Currency Title</string>
    <string name="currency">Currency</string>
    <string name="place_order">Place Order</string>
    <string name="order_number">Order number</string>
    <string name="order_total">Order total</string>
    <string name="items_number">Items number</string>

    //product info page
    <string name="addToCart">Add To Cart</string>
    <string name="product_description">Description</string>
    <string name="show_reviews">Show Reviews</string>
    <string name="hide_reviews">Hide Reviews</string>
    <string name="review">Reviews</string>
    <string name="suggest">Product Suggestions</string>
    <string name="product_info_title">Product Details</string>
    <string name="select_variant">Select variant</string>

    //category
    <string name="price">Price Range</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="dialog_filter">Filtering</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="validate">Validate</string>
    <string name="valid">Valid</string>
    <string name="sure">Sure</string>

    //Address
    <string name="newAddress">Add New Address</string>
    <string name="newAddressAdded">Add This Address</string>
    <string name="chooseAddressOrder">Choose Address for Your Order</string>
    <string name="Address">Address</string>
    <string name="country">Country:</string>
    <string name="address_1">First Address:</string>
    <string name="address_2">Second Address:</string>
    <string name="phone">Phone:</string>


    //payment
    <string name="payment">Continue To Payment</string>
    <string name="next">Next</string>
    <string name="checkout">Checkout</string>

    //settings
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="setting">Setting</string>
    <string name="Currency">Currency</string>
    <string name="AboutUs">AboutUs</string>

    //profile
    <string name="Orders">Orders</string>
    <string name="Logout">Logout</string>
    <string name="Settings">Settings</string>

    //Dialog
    <string name="delete_title">Deletion</string>
    <string name="delete_body">Are you sure you want to delete this product from your favourite list?</string>
    <string name="logout_body">Are you sure you want to logout?</string>

    <string name="order_items">Order Items</string>
    <string name="cash">Cash</string>
    <string name="payment_method">Payment Method</string>
    <string name="total_price">Total Price</string>
    <string name="_100">100$</string>
    <string name="ahmed_gmail_com">ahmed@gmail.com</string>
    <string name="contact_email">Email</string>
    <string name="phone_number">Phone</string>
    <string name="quantity">quantity</string>

    //auth message
    <string name="auth">Authentication</string>
    <string name="error_login">Login failed, please try again"</string>
    <string name="error_signup">Create account failed, please try again</string>
    <string name="email_message">Please verify your email, then try to login again</string>
    <string name="error_email_verify">Login failed, please verify your email first</string>
    <string name="exist">Already Exist</string>
    <string name="not_exist">Not Exist</string>
    <string name="empty">Empty Field</string>
    <string name="error_email_format">Invalid email format</string>
    <string name="error_password_format">At least contains 8 characters
at least one upper letter, one lowercase letter, and one digit</string>
    <string name="error_not_match">Password and confirm password doesn\'t match</string>
    <string name="error_name_format">At least 3 characters</string>


    //cart
    <string name="DeleteAll">Delete All Cart Items</string>
    <string name="subTotal">Subtotal:</string>
    <string name="fav">Add Items To Your Favorite List</string>
    <string name="map">Empty Addresses List! Add Your Addresses</string>
    <string name="cart">Your Shopping cart is empty !</string>
    <string name="a1">Address Line 1</string>
    <string name="a2">Address Line 2</string>
    <string name="c">City</string>
    <string name="co">Company</string>
    <string name="cu">Country</string>
    <string name="cu1">Country Name</string>
    <string name="cu2">Country Code</string>
    <string name="zip">Zip</string>
    <string name="name">Name</string>
    <string name="ffname">First Name</string>
    <string name="llname">Last Name</string>
    <string name="phonee">Phone</string>
    <string name="ph">Province</string>
    <string name="delete_all_cart_items_title">Delete All Cart Items</string>
    <string name="delete_all_cart_items_message">Are you sure you want to delete all cart items?</string>
    <string name="confirm_deletion_title">Confirm Deletion</string>
    <string name="confirm_deletion_message">Are you sure you want to delete this item from your shopping cart?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="item_deleted_successfully">Item Deleted Successfully</string>
    <string name="choose_currency_title">Choose Currency</string>
    <string name="selected_currency">Selected: </string>
    <string name="orderEmpty">Let\'s Create Your First Order !</string>
    <string name="guest_profile">Do you have an Account? </string>
    <string name="guest_profile2">Just Click Login! </string>

    //navbar
    <string name="homeNav">Home</string>
    <string name="CartNav">Cart</string>
    <string name="FavoriteNav">Favorite</string>
    <string name="SettingsNav">Profile</string>
    <string name="CategoryNav">Category</string>
    <string name="guest_message">You need to be logged in to access this feature. Please log in to continue.</string>
    <string name="addedSuccessfully">The Order Was Placed Successfully </string>
    <string name="addedSuccessfully2">The Address Was Added Successfully </string>
    <string name="addedSuccessfully3">The Item Was Added To Cart Successfully </string>
    <string name="About_Us">About Us</string>
    <string name="s1">Company Name: Fashion Shop</string>
    <string name="s2"> Address: 123 Sedi Gaber St, Alexandria, Egypt</string>
    <string name="s3"> Phone: +1 123-456-7890</string>
    <string name="s4">Email: Fashion_app@gmail.com</string>
    <string name="network_message_first">No internet connection found.</string>
    <string name="network_message_main">No Internet Connection</string>
    <string name="network_message_second">Please check your internet settings.</string>
    <string name="network_message">Your network message here</string>

    <string name="decrease_quantity_message">Cannot decrease below 1 quantity</string>
    <string name="increase_quantity_message_1">Cannot increase above</string>
    <string name="increase_quantity_message_2">quantity</string>
    <string name="delete_d_address_title">Cannot Delete Default Address</string>
    <string name="delete_d_address_body">The default address cannot be deleted.</string>
    <string name="delete">Delete</string>
    <string name="delete_address_body">Are you sure you want to delete this address?</string>
    <string name="d_address_success">Default Address Successfully</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="no_current_location">Unable to get current location, please turn your Location Setting</string>
    <string name="your_location">Your Location</string>
    <string name="network_error">Network Error</string>
    <string name="failed_load_data">Failed to load data. Please try again.</string>
    <string name="clicked_on">Clicked on</string>
    <string name="copy_discount_code">Discount code copied to clipboard</string>
    <string name="coupon_success">Coupon Applied Successfully</string>
    <string name="invalid_coupon">Invalid Coupon</string>
    <string name="invalid_coupon_body">The coupon you entered is invalid.</string>
    <string name="choose_payment_method">Choose Your Payment Method</string>
    <string name="order_placed_success">Order placed successfully</string>
    <string name="order_not_found">Order Not Found</string>
    <string name="order_not_found_body">The order details could not be found.</string>
    <string name="visa_select">Visa Card selected</string>
    <string name="cash_select">Cash on Delivery selected</string>
    <string name="select_payment_method">Please select a payment method</string>
    <string name="payment_success">Payment successful</string>
    <string name="payment_finish">Payment process finished</string>
    <string name="must_select_variant">You Must Select Variant !</string>
    <string name="product_not_available">Product information not available</string>
    <string name="add_product_success">Product added successfully</string>
    <string name="selected">Selected</string>
    <string name="choose_language">Choose Language</string>
    <string name="quantity_change_success">Quantity Changed Successfully</string>


</resources>