<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/homeNav" />

    <item
        android:id="@+id/categoryFragment"
        android:icon="@drawable/ic_categories"
        android:title="@string/CategoryNav" />

    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_cart"
        android:title="@string/CartNav" />

    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_heart"
        android:title="@string/FavoriteNav" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_account"
        android:title="@string/SettingsNav" />


</menu>