<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_marginBottom="80dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Map"
                    android:textSize="32dp"
                    android:textColor="@color/favourite"
                    android:layout_marginEnd="16dp"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/mapIcon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:tintMode="src_in"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/map_btn"
                    app:tint="@color/favourite" />

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/a1"
                android:layout_marginTop="4dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddress1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/a2"
                android:layout_marginTop="4dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddress2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/c"
                android:layout_marginTop="4dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/co"
                android:layout_marginTop="4dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ffname"
                android:layout_marginTop="4dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/llname"
                android:layout_marginTop="4dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phonee"
                android:layout_marginTop="4dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ph"
                android:layout_marginTop="4dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProvince"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cu"
                android:layout_marginTop="4dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cu1"
                android:layout_marginTop="4dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCountryName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zip"
                android:layout_marginTop="4dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etZip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:layout_marginTop="4dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cu2"
                android:layout_marginTop="4dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCountryCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/buttonSendRequest"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/black"
                android:text="@string/newAddressAdded"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="0.0" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
