<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="centerCrop"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/skipBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/skip"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_app"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/title1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title1"
        android:textColor="@color/black"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/title2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title2"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/emailTxt"
        app:layout_constraintStart_toStartOf="@+id/title1"
        app:layout_constraintEnd_toEndOf="@+id/title1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTxt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/email"
        android:textSize="16sp"
        app:startIconDrawable="@drawable/ic_email"
        app:layout_constraintBottom_toTopOf="@+id/passwordTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTxt"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/password"
        android:textSize="16sp"
        app:startIconDrawable="@drawable/ic_privacy"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="@+id/emailTxt"
        app:layout_constraintStart_toStartOf="@+id/emailTxt"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"
        style="?attr/materialButtonOutlinedStyle"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/passwordTxt"
        app:layout_constraintStart_toStartOf="@+id/passwordTxt"
        app:layout_constraintBottom_toTopOf="@+id/textDesign3"/>

    <View
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="24dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/googleBtn"
        app:layout_constraintEnd_toStartOf="@+id/textDesign3"
        app:layout_constraintStart_toStartOf="@+id/googleBtn" />

    <TextView
        android:id="@+id/textDesign3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/line1"
        app:layout_constraintEnd_toStartOf="@+id/line2"
        app:layout_constraintStart_toEndOf="@+id/line1"
        app:layout_constraintTop_toTopOf="@+id/line1" />


    <View
        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/textDesign3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textDesign3"
        app:layout_constraintTop_toTopOf="@+id/textDesign3" />

    <Button
        android:id="@+id/googleBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:alpha="0.8"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/logo_google"
        android:text="@string/google"
        android:textColor="@color/black"
        android:textSize="20sp"
        style="?attr/materialButtonOutlinedStyle"
        app:cornerRadius="10dp"
        app:strokeColor="@color/orange"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toTopOf="@+id/signupLayput"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="@+id/loginBtn" />

    <LinearLayout
        android:id="@+id/signupLayput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn">

    <Button
        android:id="@+id/signupBtn1"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orSignup"
        android:textColor="@color/gray"
        android:gravity="end"
        android:textSize="18sp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/signupBtn2"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:gravity="start"
        android:textSize="16sp"
        android:textStyle="bold"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>