<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Modules.FavProductList.view.FavoriteFragment">

    <LinearLayout
        android:id="@+id/layoutConnection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/boy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/network_message_main"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/network_message_first"
            android:textColor="@color/darkGray"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/network_message_second"
            android:textColor="@color/darkGray"
            android:textSize="18sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/emptyViewGuest"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/emptyAnimationViewguest"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/l" />

        <TextView
            android:id="@+id/emptyTextViewguest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guest_profile"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/emptyTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/guest_profile2"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/loginBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/black"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/emptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/emptyAnimationView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/f" />

        <TextView
            android:id="@+id/emptyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fav"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        tools:listitem="@layout/card_product" />

</FrameLayout>